# robotics-foundations

./: .gitignore  notes.md
week01/: README.md  differential_motion.py
week02/cpp_motion_sim/: CMakeLists.txt  README.md  main.cpp  mobile_robot.cpp  mobile_robot.hpp  robot.cpp  robot.hpp
week02/cpp_motion_sim/include/: robot.hpp
week02/cpp_motion_sim/src/: main.cpp  robot.cpp
week03/: CMakeLists.txt  README.md  config_differential.txt  config_unicycle.txt
week03/include/: logger.hpp  path_analyzer.hpp  robot.hpp  simulation_app.hpp
week03/src/: logger.cpp  main.cpp  path_analyzer.cpp  robot.cpp  simulation_app.cpp
week04/ros2_ws/src/robot_motion_sim/: CMakeLists.txt  README.md  package.xml
week04/ros2_ws/src/robot_motion_sim/src/: pose_publisher_node.cpp  robot_simulator_node.cpp  simple_timer_node.cpp  velocity_subscriber_node.cpp
week05/ros2_ws/src/robot_motion_sim/: CMakeLists.txt  README.md  package.xml
week05/ros2_ws/src/robot_motion_sim/launch/: sim.launch.py
week05/ros2_ws/src/robot_motion_sim/src/: robot.cpp  robot_simulator_node.cpp
week06/ros2_ws/src/robot_motion_sim/: CMakeLists.txt  README.md  package.xml
week06/ros2_ws/src/robot_motion_sim/config/: sim_params.yaml
week06/ros2_ws/src/robot_motion_sim/launch/: sim.launch.py
week06/ros2_ws/src/robot_motion_sim/rviz/: sim.rviz
week06/ros2_ws/src/robot_motion_sim/src/: robot_simulator_node.cpp
week06/ros2_ws/src/robot_motion_sim/urdf/: robot.urdf  robot.urdf.xacro
week07/ros2_ws/src/robot_motion_sim/: CMakeLists.txt  README.md  package.xml
week07/ros2_ws/src/robot_motion_sim/config/: sim_params.yaml
week07/ros2_ws/src/robot_motion_sim/include/robot_motion_sim/: robot.hpp
week07/ros2_ws/src/robot_motion_sim/launch/: sim.launch.py
week07/ros2_ws/src/robot_motion_sim/rviz/: sim.rviz
week07/ros2_ws/src/robot_motion_sim/src/: robot_simulator_node.cpp
week07/ros2_ws/src/robot_motion_sim/urdf/: robot.urdf
